--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon server.js",
     "static": "http-server -p 3000 -c-1",
     "build": "echo 'No build step required for static site'",
-    "deploy": "echo 'Deploy to your preferred hosting service'"
+    "deploy": "vercel --prod",
+    "vercel-build": "echo 'Build completed'"
   },
   "keywords": [
     "portfolio",
@@ -38,5 +39,8 @@
   "bugs": {
     "url": "https://github.com/yourusername/creative-portfolio/issues"
   },
-  "homepage": "https://yourusername.github.io/creative-portfolio"
+  "homepage": "https://yourusername.github.io/creative-portfolio",
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
